objects/BMCServiceDesk__Status__c.object
<CustomObject>
    <description>This object allows you to store data for status records.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting Status from RF Status Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Status Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSYSStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to SYSStage</description>
        <inlineHelpText>From the list of options, select the stage that you would like to map to the status. A stage is a visual indicator of the record&apos;s progress from beginning to completion.</inlineHelpText>
        <label>Stage</label>
        <referenceTo>BMCServiceDesk__SYSStage__c</referenceTo>
        <relationshipLabel>Status</relationshipLabel>
        <relationshipName>Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Stage__c</fullName>
        <formula>BMCServiceDesk__FKSYSStage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToBroadcasts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create broadcast records.</inlineHelpText>
        <label>Applies to Broadcasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToChangeApprovals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To Change Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToChangeAssessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To Change Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToChange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create Change Request.</inlineHelpText>
        <label>Applies to Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToConfigurationItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to Configuration Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToIncident__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create incident records.</inlineHelpText>
        <label>Applies to Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToPreventiveMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to Preventive Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToProblem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create Problem.</inlineHelpText>
        <label>Applies to Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToPurchasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to Purchasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToRelease__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create release records.</inlineHelpText>
        <label>Applies To Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToSLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies to Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__appliesToTask__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this field to make this status available when you create task records.</inlineHelpText>
        <label>Applies to Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__defaultMergeStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to assign the status as the default link status when you create, open or close records. You can create multiple statuses with the Open and Closed states, but only one status can be the default link status for the Open and Closed states.</inlineHelpText>
        <label>Default Link Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__defaultStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to assign the status as the default status when you create, open, or close records. You can create multiple statuses with the Open and Closed states, but only one status can be the default status for the Open and Closed states.</inlineHelpText>
        <label>Default Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the status record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__stageProgression__c</fullName>
        <formula>BMCServiceDesk__FKSYSStage__r.BMCServiceDesk__Order__c</formula>
        <label>Stage Progression</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__state__c</fullName>
        <defaultValue>true</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__workStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to calculate the total time spend on incident until it is closed.</inlineHelpText>
        <label>Work Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Status</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__defaultStatus__c</columns>
        <columns>BMCServiceDesk__state__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__StatusUniqueCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Status__c.Fields.Name , $ObjectType.BMCServiceDesk__Status__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Status__c.Fields.Name , $ObjectType.BMCServiceDesk__Status__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>A record with this Status already exists. Enter unique Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Status_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter value in Status field.</errorMessage>
    </validationRules>
</CustomObject>